--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -27,10 +27,6 @@ In short, the computational model introduced by the Qiskit primitives moves quan
 to where classical programming is today, where the focus is less on the hardware details and more on the results
 you are trying to achieve.
 
-<Admonition type="note">
-The Qiskit Runtime V1 primitives have been deprecated.  For instructions to migrate to the V2 primitives, see the [migration guide.](/migration-guides/v2-primitives)
-</Admonition>
-
 ## Implementation of Qiskit primitives
 
 The Qiskit primitives are defined by open-source primitive base-classes, from
@@ -39,14 +35,6 @@ using Qiskit, you can find reference primitive implementations for local simulat
 Providers like Qiskit Runtime enable access to appropriate QPUs through native implementations of
 their own primitives.
 
-<Admonition type="caution" title="Important">
-To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the QPU (referred to as *instruction set architecture (ISA)* circuits and observables) before being submitted to the Qiskit Runtime primitives.  See the [transpilation documentation](./transpile) for instructions to transform circuits.  Due to this change, the primitives will no longer perform layout or routing operations.  Consequently, transpilation options referring to those tasks will no longer have any effect. By default, all V1 primitives optimize the input circuits. To bypass all optimization when using a V1 primitive, set `optimization_level=0`.
-
-*Exception*: When you initialize the Qiskit Runtime Service with the Q-CTRL channel strategy (example below), abstract circuits are still supported.
-
-``` python
-service = QiskitRuntimeService(channel="ibm_cloud", channel_strategy="q-ctrl")
-```
 </Admonition>
 
 ## Benefits of Qiskit primitives
@@ -60,47 +48,28 @@ For hardware providers, implementing primitives natively means you can provide y
 way to access your hardware features. It is therefore easier for your users to benefit from your hardware's
 best capabilities.
 
-## V2 primitives
+## Input
 
-Version 2 (available with `qiskit-ibm-runtime` 0.21.0 and later) is the first major interface change since the introduction of Qiskit Runtime primitives. Based on user feedback, the new version introduces the following major changes:
+You can specify a single circuit and multiple observables (if using Estimator) and parameter value sets for that circuit.
 
-* The **new interface** lets you specify a single circuit and multiple observables (if using Estimator) and parameter value sets for that circuit.
-* You can **turn on or off individual error mitigation and suppression methods**.
-* You can choose to **get counts or per-shot measurements** instead of quasi-probabilities from Sampler V2.
-* Due to scaling issues, Sampler V2 does not support specifying a resilience level, and Estimator V2 supports only levels 0 - 2.
-* To reduce the total execution time, V2 primitives only support ISA circuits. You can use the [Qiskit transpiler](./transpile) (manually) or the [AI-driven transpilation service (for Premium Plan users)](./qiskit-transpiler-service) to transform the circuits before making queries to the primitives.
+<Admonition type="caution" title="Important">
+To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the QPU (referred to as *instruction set architecture (ISA)* circuits and observables) before being submitted to the Qiskit Runtime primitives.  You can use the [Qiskit transpiler](./transpile) (manually) or the [AI-driven transpilation service (for Premium Plan users)](./qiskit-transpiler-service) to transform the circuits before making queries to the primitives.
 
-See the [EstimatorV2 API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2) and [SamplerV2 API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV2) for full details.
+*Exception*: When you initialize the Qiskit Runtime Service with the Q-CTRL channel strategy (example below), abstract circuits are still supported.
 
-### Interface changes
-
-The updated interface uses a *primitive unified bloc* (PUB) for input.  Each PUB is a tuple that contains a circuit and the data broadcasted to it. This greatly simplifies your ability to send complex data to a circuit.  Previously, you had to specify the same circuit multiple times to match the size of the data to be combined.  A summary of the changes to each primitive follows.
-
-#### Estimator V1
-
-<Admonition type="warning">
-[EstimatorV1](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV1) has been deprecated in `qiskit-ibm-runtime` 0.23.
-Its support will be removed on 15 August 2024.
-[EstimatorV2](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2) is highly recommended instead.
-</Admonition>
-
-* Takes three parameters: circuits, observables, and parameter values.
-* Each parameter can be a single value or a list.
-* The length of the parameters must match.
-* Elements from each are aggregated.
-
-Example:
-
-```python
-estimator.run([circuit1, circuit2, ...],[observable1, observable2, ...],
-  [param_values1, param_values2, ...] )
+``` python
+service = QiskitRuntimeService(channel="ibm_cloud", channel_strategy="q-ctrl")
 ```
 
-#### Estimator V2
+## Estimator
 
-* The `run()` method takes an array of PUBs. Each PUB is in the format (`<single circuit>`, `<one or more observables>`, `<optional one or more parameter values>`, `<optional precision>`), where the optional `parameter values` can be a list or a single parameter.
-* Combines elements from observables and parameter values by following NumPy broadcasting rules as described below.
-* Each input PUB has a corresponding PubResult that contains both data and metadata.
+Estimator computes expectation values of observables with respect to states prepared by quantum circuits.
+It receives an array of primitive unified blocs (PUBs) as the inputs and returns the computed expectation values per pair, along with their
+standard error, in `PubResult` form. Different Estimator implementations support various configuration options. Each `PubResult` contains both data and metadata. The circuits can be parametrized, as long as the parameter values are also provided as input to the primitive.
+
+Each PUB is in the format (`<single circuit>`, `<one or more observables>`, `<optional one or more parameter values>`, `<optional precision>`), where the optional `parameter values` can be a list or a single parameter.
+
+Estimator combines elements from observables and parameter values by following NumPy broadcasting rules as described below.
 
 Example:
 
@@ -109,9 +78,9 @@ estimator.run([(circuit1, observable1, param_values1),(circuit2, observable2, pa
 ```
 
 <span id="broadcast-rules"></span>
-##### Broadcasting rules
+### Broadcasting rules
 
-Estimator V2 aggregates elements from multiple arrays (observables and parameter values) by following the same broadcasting rules as NumPy. This section summarizes those rules.  For a detailed explanation, see the [NumPy broadcasting rules documentation.](https://numpy.org/doc/stable/user/basics.broadcasting.html)
+Estimator aggregates elements from multiple arrays (observables and parameter values) by following the same broadcasting rules as NumPy. This section summarizes those rules.  For a detailed explanation, see the [NumPy broadcasting rules documentation.](https://numpy.org/doc/stable/user/basics.broadcasting.html)
 
 Rules:
 
@@ -194,29 +163,16 @@ list2 = [SparsePauliOp("XX"), SparsePauliOp("XY"), SparsePauliOp("IZ")] # shape 
 ```
 </Admonition>
 
-#### Sampler V1
+## Sampler
 
-<Admonition type="warning">
-[SamplerV1](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV1) has been deprecated in `qiskit-ibm-runtime` 0.23.
-Its support will be removed on 15 August 2024.
-[SamplerV2](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV2) is highly recommended instead.
-</Admonition>
+Sampler's core task is sampling the output register from execution of quantum circuits. It receives one or more PUBs as the inputs and returns counts or per-shot measurements, as `PubResult` objects, without weights. The result class, however, has methods to return weighted samples, such as counts. The input circuits
+can be parametrized, as long as the parameter values are also provided as input to the primitive.
 
-* Takes two parameters: circuits and parameter values.
-* Each parameter can be a single value or a list.
-* The length of the parameters must match.
-* Elements from each are aggregated.
+The input PUBs have the format  (`<single circuit>`, `<optional one or more parameter values>`, `<optional shots>`), where there can be multiple `parameter values` items, and each item can be either an array or a single parameter, depending on the chosen circuit.
 
-Example:
+Input and output notes:
 
-```python
-sampler.run([circuit1, circuit2, ...],[observable1, observable2, ...],[param_values1, param_values2, ...] )
-```
-
-#### Sampler V2
-
-* Takes one parameter: PUBs in the format  (`<single circuit>`, `<optional one or more parameter values>`, `<optional shots>`), where there can be multiple `parameter values` items, and each item can be either an array or a single parameter, depending on the chosen circuit.
-* Elements from each are aggregated. For example, each array of parameter values in the PUB is applied to the PUB's circuit.
+* Elements from each PUB are aggregated. For example, each array of parameter values in the PUB is applied to the PUB's circuit.
 * Obeys program outputs. Typically this is a bit array but can also be an array of complex numbers (measurement level 1).
 * Returns raw data type. Data from each shot is returned (analogous to `memory=True` in the `backend.run` interface), and post-processing is done by using convenience methods.
 * Output data is grouped by output registers. You need the classical register name to get the results. By default, it is named `meas` if you use `measure_all()`. You can find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
@@ -233,48 +189,6 @@ sampler.run([
   (circuit2, param_values2, shots_2),
 ])
 ```
-
-## Estimator
-
-The Estimator behaves differently, depending on what version you are using.
-
-<Tabs>
-  <TabItem value="EstimatorV2" label="Estimator V2">
-    Estimator V2 computes expectation values of observables with respect to states prepared by quantum circuits.
-It receives one or more PUBs as the inputs and returns the computed expectation values per pair, along with their
-standard error, in `PubResult` form. Different Estimator implementations support various configuration options. The circuits
-can be parametrized, as long as the parameter values are also provided as input to the primitive.
-  </TabItem>
-
-  <TabItem value="EstimatorV1" label="Estimator (V1)">
-    The Estimator primitive computes expectation values of observables with respect to states prepared by quantum circuits.
-The Estimator receives circuit-observable pairs (with the observable expressed as a
-weighted sum of Pauli operators) as inputs, and returns the computed expectation values per pair, as well as their
-variances. Different Estimator implementations support various configuration options. The circuits
-can be parametrized, as long as the parameter values are also provided as input to the primitive.
-  </TabItem>
-</Tabs>
-
-## Sampler
-
-The Sampler behaves differently, depending on what version you are using.
-
-<Tabs>
-  <TabItem value="SamplerV2" label="Sampler V2">
-    Sampler V2 is simplified to focus on its core task of sampling the output register from execution of quantum circuits. It returns the samples, whose type is defined by the program, without weights and therefore does not support resilience levels. The result class, however, has methods to return weighted samples, such as counts.
-
-    It receives one or more PUBs as the inputs and returns counts or per-shot measurements, as `PubResult`s.  The circuits
-can be parametrized, as long as the parameter values are also provided as input to the primitive.
-  </TabItem>
-
-  <TabItem value="SamplerV1" label="Sampler (V1)">
-    The Sampler primitive samples from the classical output registers resulting from execution of quantum circuits.
-For this reason, the inputs to the Sampler are (parametrized) quantum circuits, for which it returns the corresponding
-quasi-probability distributions of sampled bitstrings. Quasi-probability distributions are similar to regular
-probabilities, except they might include negative values, which can occur when using certain error mitigation techniques.
-  </TabItem>
-</Tabs>
-
 
 ## How to use Qiskit primitives
 
@@ -301,7 +215,8 @@ The Qiskit Runtime primitives provide a more sophisticated implementation (for e
 <Admonition type="tip" title="Recommendations">
     - Read [Get started with primitives](get-started-with-primitives) to implement primitives in your work.
     - Review detailed [primitives examples.](primitives-examples)
-    - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum&trade; Learning.
+    - See the [EstimatorV2 API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2) and [SamplerV2 API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV2).
+    - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).
 </Admonition>
 
