--- a/docs/migration-guides/qiskit-algorithms-module.mdx
+++ b/docs/migration-guides/qiskit-algorithms-module.mdx
@@ -563,7 +563,7 @@ hamiltonian = SparsePauliOp.from_list([("XXZ", 1), ("XYI", 1)])
 service = QiskitRuntimeService(channel="ibm_quantum")
 backend = service.backend("ibm_sherbrooke")
 
-with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
     estimator = Estimator()
     sampler = Sampler()
     fidelity = ComputeUncompute(sampler)
