--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -40,7 +40,7 @@ class. The session starts when its first job begins execution.
 from qiskit_ibm_runtime import Session, Samplerv2 as Sampler, Estimatorv2 as Estimator
 
 backend = service.least_busy(operational=True, simulator=False)
-session = Session(service=service, backend=backend)
+session = Session(backend=backend)
 estimator = Estimator(mode=session)
 sampler = Sampler(mode=session)
 ```
@@ -51,7 +51,7 @@ sampler = Sampler(mode=session)
 from qiskit_ibm_runtime import Session, Sampler, Estimator
 
 backend = service.least_busy(operational=True, simulator=False)
-session = Session(service=service, backend=backend)
+session = Session(backend=backend)
 estimator = Estimator(session=session)
 sampler = Sampler(session=session)
 ```
@@ -68,7 +68,7 @@ The context manager automatically opens and closes the session.
 from qiskit_ibm_runtime import Session, Samplerv2 as Sampler, Estimatorv2 as Estimator
 
 backend = service.least_busy(operational=True, simulator=False)
-with Session(service=service, backend=backend):
+with Session(backend=backend):
   estimator = Estimator()
   sampler = Sampler()
 ```
@@ -79,7 +79,7 @@ with Session(service=service, backend=backend):
 from qiskit_ibm_runtime import Session, Sampler, Estimator
 
 backend = service.least_busy(operational=True, simulator=False)
-with Session(service=service, backend=backend):
+with Session(backend=backend):
   estimator = Estimator()
   sampler = Sampler()
 ```
@@ -92,7 +92,7 @@ When you start a session,  you must specify a QPU. This can be done by specifyin
 
 ``` python
 service = QiskitRuntimeService()
-with Session(service=service, backend="ibm_sherbrooke"):
+with Session(backend="ibm_sherbrooke"):
     ...
 ```
 
@@ -110,7 +110,7 @@ with Session(backend=backend):
 You can define the maximum session timeout with the `max_time` parameter. This should exceed the longest job's execution time and be within the QPU's limits.
 
 ``` python
-with Session(service=service, backend=backend, max_time="25m"):
+with Session(backend=backend, max_time="25m"):
   ...
 ```
 
@@ -122,7 +122,7 @@ There is also an interactive time to live (ITTL) value that cannot be configured
 A session automatically closes when it exits the context manager. When the session context manager is exited, the session is put into "In progress, not accepting new jobs" status. This means that the session finishes processing all running or queued jobs until the maximum timeout value is reached. After all jobs are completed, the session is immediately closed. This allows the scheduler to run the next job without waiting for the session interactive timeout, thereby reducing the average job queuing time. You cannot submit jobs to a closed session.
 
 ``` python
-with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
     estimator = Estimator()
     job1 = estimator.run(...)
     job2 = estimator.run(...)
@@ -154,7 +154,7 @@ session.close()
 Canceling a session immediately closes it, failing all queued jobs and preventing new submission. Use the `session.cancel()` method to cancel a session.  Any jobs that are already running continue to run but queued jobs are put into a failed state and no further jobs can be submitted to the session. This is a convenient way to quickly fail all queued jobs within a session.
 
 ``` python
-with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
     estimator = Estimator()
     job1 = estimator.run(...)
     job2 = estimator.run(...)
@@ -259,7 +259,7 @@ from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
 service = QiskitRuntimeService()
 backend = service.least_busy(operational=True, simulator=False)
 
-with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
     estimator = Estimator()
     job = estimator.run([(circuit, observable)])
     print(session.details())
@@ -273,7 +273,7 @@ from qiskit_ibm_runtime import QiskitRuntimeService
 service = QiskitRuntimeService()
 backend = service.least_busy(operational=True, simulator=False)
 
-with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
     estimator = Estimator()
     job = estimator.run(circuit, observable)
     print(session.details())
