--- a/docs/migration-guides/v2-primitives.mdx
+++ b/docs/migration-guides/v2-primitives.mdx
@@ -780,7 +780,7 @@ service = QiskitRuntimeService()
 
 backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 
-with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
     estimator = Estimator()
 
     estimator.options.resilience_level = 1
@@ -832,7 +832,7 @@ service = QiskitRuntimeService()
 
 backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 
-with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
     estimator = Estimator(options=options)
     job = estimator.run(isa_circuit, isa_observable)
     another_job = estimator.run(another_isa_circuit, another_isa_observable)
@@ -1122,7 +1122,7 @@ sampler.options.dynamical_decoupling.sequence_type = "XpXm"
 
 backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 
-with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
     sampler = Sampler()
     job = sampler.run([isa_circuit])
     another_job = sampler.run([another_isa_circuit])
@@ -1162,7 +1162,7 @@ service = QiskitRuntimeService()
 
 backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 
-with Session(service=service, backend=backend) as session:
+with Session(backend=backend) as session:
     sampler = Sampler(options=options)
     job = sampler.run(circuit)
     another_job = sampler.run(another_circuit)
