--- a/docs/migration-guides/qiskit-runtime-use-case.mdx
+++ b/docs/migration-guides/qiskit-runtime-use-case.mdx
@@ -169,7 +169,7 @@ isa_circuit = pm.run(qc)
 
 The primitives take in parametrized circuits directly, together
 with the parameter values, and the parameter assignment operation can be
-performed more efficiently on the server side.  The input is in the form of primitive unified blocs (PUBs), where each PUB is a tuple that contains a circuit and the data broadcasted to it. For further details, see [Introduction to primitives.](/guides/primitives#interface-changes)
+performed more efficiently on the server side.  The input is in the form of primitive unified blocs (PUBs), where each PUB is a tuple that contains a circuit and the data broadcasted to it. For further details, see [Primitive inputs and outputs.](/guides/primitive-input-output)
 
 If you have multiple sets of parameter values you want to bind to the same circuit, you can specify them in a single PUB, in the format of (circuit, [parameter_value_set1, parameter_value_set2]).
 
