--- a/docs/guides/execution-modes-faq.mdx
+++ b/docs/guides/execution-modes-faq.mdx
@@ -61,7 +61,8 @@ Yes. This reduces unwanted cost if a user forgets to close their session.
     Can I change the interactive timeout (ITTL) or the maximum timeout of a session?
   </summary>
 
-No, you cannot change the interactive or maximum timeout values. You can, however, ask your administrator to contact IBM support to request for a change.
+You cannot change the interactive timeout value. You can change the maximum timeout value of a session (see [Specify the session length](run-jobs-session#specify-length)), but it must be below the system-defined maximum. Ask your administrator to contact IBM support if you need a different interactive TTL or system maximum TTL.
+
 </details>
 
 <details>
