--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -161,6 +161,7 @@ list2 = [SparsePauliOp("XX"), SparsePauliOp("XY"), SparsePauliOp("IZ")] # shape 
 ```
 </Admonition>
 
+<span id="sampler"></span>
 ## Sampler
 
 Sampler's core task is sampling the output register from execution of quantum circuits. It receives one or more PUBs as the inputs and returns counts or per-shot measurements, as `PubResult` objects, without weights. The result class, however, has methods to return weighted samples, such as counts. The input circuits
