--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -58,6 +58,7 @@ To ensure faster and more efficient results, as of 1 March 2024, circuits and ob
 ``` python
 service = QiskitRuntimeService(channel="ibm_cloud", channel_strategy="q-ctrl")
 ```
+</Admonition>
 
 ## Estimator
 
