--- a/docs/guides/map-problem-to-circuits.mdx
+++ b/docs/guides/map-problem-to-circuits.mdx
@@ -18,8 +18,8 @@ outset if the structure of the problem lends itself to optimization earlier.
 
 It is also worth considering at this point what the outcome of the particular algorithm will be
 in preparation for the later execute step - for example, if the desired outcome involves
-inferring correlation functions using Hadamard tests, you might prepare to use `Sampler`, whereas
-specifying observables would use the `Estimator` and could provide many error mitigation options.
+inferring correlation functions using Hadamard tests, you might prepare to use Sampler, whereas
+specifying observables would use Estimator and could provide many error mitigation options.
 
 The output of this step in a Qiskit pattern is normally a collection of circuits or quantum operators.
 
