--- a/docs/migration-guides/qiskit-opflow-module.mdx
+++ b/docs/migration-guides/qiskit-opflow-module.mdx
@@ -945,7 +945,7 @@ q: ┤ U3(2,-π/2,π/2) ├
 
 Expectations are converters that enable an observable's expectation value to be computed with respect to some state function.
 This function can now be found in the [`qiskit.primitives.Estimator`](/api/qiskit/qiskit.primitives.Estimator) primitive. Remember that there
-are different `Estimator` implementations, as noted [previously.](#attention_primitives)
+are different Estimator implementations, as noted [previously.](#attention_primitives)
 
 ### Algorithm-Agnostic Expectations
 
