--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -29,7 +29,7 @@ service = QiskitRuntimeService()
 ## Open a session
 
 You can open a runtime session by using the context manager `with Session(...)` or by initializing the `Session`
-class. The session starts when its first job begins execution.
+class. When you start a session,  you must specify a QPU by passing a `backend` object. The session starts when its first job begins execution.
 
 
 **Session class**
@@ -54,25 +54,6 @@ backend = service.least_busy(operational=True, simulator=False)
 with Session(backend=backend):
   estimator = Estimator()
   sampler = Sampler()
-```
-
-When you start a session,  you must specify a QPU. This can be done by specifying its name or by passing a `backend` object.
-
-**Specify a QPU by name**
-
-``` python
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False)
-with Session(backend=backend):
-    ...
-```
-
-**Pass a `backend` object**
-
-``` python
-backend = service.least_busy(operational=True, simulator=False)
-with Session(backend=backend):
-  ...
 ```
 
 <span id="specify-length"></span>
@@ -137,7 +118,7 @@ with Session(backend=backend) as session:
 <span id="mult-jobs-in-session"></span>
 ## Invoke multiple primitives in a session
 
-A session can handle multiple primitives, allowing for various operations within a single session.  The following example shows how you can create both an instance of the `Sampler` class and one of the `Estimator` class, then invoke their `run()` methods within a session.
+A session can handle multiple primitives, allowing for various operations within a single session.  The following example shows how you can create both an instance of the `SamplerV2` class and one of the `EstimatorV2` class, then invoke their `run()` methods within a session.
 
 ```python
 from qiskit_ibm_runtime import Session, SamplerV2 as Sampler, EstimatorV2 as Estimator
