--- a/docs/guides/visualize-results.ipynb
+++ b/docs/guides/visualize-results.ipynb
@@ -150,7 +150,7 @@
    "source": [
     "## Plotting estimator results\n",
     "\n",
-    "Qiskit does not have a built-in function for plotting `Estimator` results, but you can use Matplotlib's [`bar` plot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html) for a quick visualization.\n",
+    "Qiskit does not have a built-in function for plotting Estimator results, but you can use Matplotlib's [`bar` plot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html) for a quick visualization.\n",
     "\n",
     "To demonstrate, the following cell estimates the expectation values of seven different observables on a quantum state."
    ]
