--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -121,74 +121,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e5dcab7b",
-   "metadata": {},
-   "source": [
-    "## Probabilistic Error Amplification (PEA)\n",
-    "\n",
-    "PEA is an aplification technique used with [Zero-noise extrapolation(ZNE)](#zne).  The main challenge in successfully implmenting ZNE is to have an accurate model for noise in the expectation value and to amplify the noise in a known way.  For utility-scale experiments, PEA is often the best choice because it can be applied to any circuit that can be run with native noise factor $(\\lambda - 1)$. \n",
-    "\n",
-    "Because PEA is a ZNE amplification technique, you also need to enable ZNE by setting `resilience.zne_mitigation = True`. Other `resilience.zne` options can be used in addition to set extrapolators, amplification levels, and so on. PEA requries a noise model, which is automatically generated when using primitives. \n",
-    "\n",
-    "When the Estimator primitive is used to call `noise-learner`, PEA can reuse the returned noise model. **LINK TO NOISE LEARNER DOCS** "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4947f442",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "estimator = Estimator(mode=backend)\n",
-    "estimator.options.resilience.zne_mitigation = True\n",
-    "estimator.options.pea = {\"resilience\": {\"zne\": {\"amplifier\": \"pea\"}}}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "68268837",
-   "metadata": {},
-   "source": [
-    "<Admonition type=\"note\"> \n",
-    "`EstimatorV2.run` invokes noise learning each time it is called.  Therefore, to ensure that you are using a consistent noise model, it is important to only call `run()` once. \n",
-    "</Admonition>\n",
-    "\n",
-    "Example where noise learning is run twice: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "030e88ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est_jobs = []\n",
-    "for pub in (pub_1, pub_2):\n",
-    "    est_jobs.append(est.run([pub]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "721b2fae",
-   "metadata": {},
-   "source": [
-    "Example where noise learning is run once:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27763949",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est_jobs = est.run((pub_1, pub_2))"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "ad9d9159-4277-4aec-bf26-da748e240f38",
@@ -274,6 +206,136 @@
     "estimator.options.resilience.zne_mitigation = True\n",
     "estimator.options.resilience.zne.noise_factors = (1, 3, 5)\n",
     "estimator.options.resilience.zne.extrapolator = \"exponential\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5dcab7b",
+   "metadata": {},
+   "source": [
+    "## Probabilistic Error Amplification (PEA)\n",
+    "\n",
+    "[PEA](https://www.nature.com/articles/s41586-023-06096-3) is a noise amplification technique used with [Zero-noise extrapolation (ZNE)](#zne) where the noise is amplified using knowledge of a [sparse Pauli-Lindblad noise model](https://www.nature.com/articles/s41567-023-02042-2), which needs to be learned by running additional circuits. Assuming that the \"target\" circuit of interest suffers noise of strength $\\alpha$, ZNE requires implementing many copies of the target circuit, each one suffering from noise whose strength is artificially amplified to values higher than $\\alpha$. Finally, the mitigated results are estimated by fitting the noisy data and extrapolating the value at noise strength $(\\alpha = 0)$. \n",
+    "\n",
+    "One of the main challenges in ZNE is to accurately amplify the noise affecting the target circuit. Many techniques, such as \"gate folding\" (see [Digital zero noise extrapolation for quantum error mitigation](https://arxiv.org/abs/2005.10921)) provide easy ways to perform this amplification, but are potentially inaccurate and might lead to incorrect results.  See the article [\"Scalable error mitigation for noisy quantum circuits produces competitive expectation values\"](https://www.nature.com/articles/s41567-022-01914-3), and specifically page 4 of the [supplementary material](https://arxiv.org/pdf/2108.09197) for details. \n",
+    "\n",
+    "PEA is a more sophisticated technique that performs preliminary experiments to reconstruct the noise and then uses this information to perform an accurate amplification. For utility-scale experiments, it is often the best choice.\n",
+    "\n",
+    "Because PEA is a ZNE amplification technique, you also need to enable ZNE by setting `resilience.zne_mitigation = True`. Other `resilience.zne` options can be used in addition to set extrapolators, amplification levels, and so on. PEA requires a noise model, which is automatically generated when using primitives. \n",
+    "\n",
+    "The following snippet provides an example where PEA is used to mitigate the result of an Estimator job:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4947f442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator = Estimator(mode=backend)\n",
+    "estimator.options.resilience.zne_mitigation = True\n",
+    "estimator.options.resilience.zne.amplifier = \"pea\"\n",
+    "\n",
+    "estimator.run(pubs, precision=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aae27947",
+   "metadata": {},
+   "source": [
+    "When choosing to use PEA, Estimator automatically performs the noise reconstruction to prepare for the actual mitigation experiment. The results of this \"noise learning\" stage are reported in Estimator's result metadata. The results can be reused in subsequent experiments, potentially leading to significantly improved runtimes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6083ba5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator = Estimator(mode=backend)\n",
+    "estimator.options.resilience.zne_mitigation = True\n",
+    "estimator.options.resilience.zne.amplifier = \"pea\"\n",
+    "\n",
+    "# The first job performs the noise reconstruction in preparation to the actual estimation task.\n",
+    "job1 = estimator.run(pubs, precision=0.01)\n",
+    "\n",
+    "# The noise data is available in the results.\n",
+    "noise_data = job1.result().metadata[\"resilience\"][\"layer_noise_model\"]\n",
+    "\n",
+    "# It can be reused in subsequent estimation jobs to skip the noise-learning stage.\n",
+    "estimator.options.resilience.layer_noise_model = noise_data\n",
+    "job2 = estimator.run(pubs, precision=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59ab042a",
+   "metadata": {},
+   "source": [
+    "The noise learning stage can also be performed independently of the estimation by using the `NoiseLearner` class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ab50448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learner = NoiseLearner(backend)\n",
+    "learner_job = learner.run(pubs)  # `run` accepts pubs or a list of circuits\n",
+    "noise_data = job.result()\n",
+    "\n",
+    "estimator = Estimator(mode=backend)\n",
+    "estimator.options.resilience.zne_mitigation = True\n",
+    "estimator.options.resilience.zne.amplifier = \"pea\"\n",
+    "estimator.options.resilience.layer_noise_model = noise_data\n",
+    "estimator_job = estimator.run(pubs, precision=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68268837",
+   "metadata": {},
+   "source": [
+    "<Admonition type=\"note\"> \n",
+    "`EstimatorV2.run` invokes noise learning each time it is called.  Therefore, to ensure that you are using a consistent noise model, it is important to only call `run()` once. \n",
+    "</Admonition>\n",
+    "\n",
+    "Example where noise learning is run twice: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "030e88ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "est_jobs = []\n",
+    "for pub in (pub_1, pub_2):\n",
+    "    est_jobs.append(est.run([pub]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "721b2fae",
+   "metadata": {},
+   "source": [
+    "Example where noise learning is run once:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27763949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "est_jobs = est.run((pub_1, pub_2))"
    ]
   },
   {
